fixing sizes + major bug in retrive exercise and editing and UPLOADING IT AGAIN YAAAAY

--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -128,97 +128,101 @@
         </RelativeLayout>
 
         <EditText
-            android:id="@+id/ageTxt2"
-            android:layout_width="108dp"
-            android:layout_height="45dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginStart="30dp"
-            android:maxLength="3"
-            android:layout_marginTop="11dp"
-            android:background="@drawable/custom_edit_text_white"
-            android:drawablePadding="10dp"
-            android:drawableRight="@drawable/age"
-            android:ems="10"
-            android:gravity="right"
-            android:inputType="number"
-            android:paddingBottom="7dp"
-            android:paddingRight="10dp"
-            android:paddingTop="8.5dp"
-            android:textSize="16dp"
-            app:layout_constraintEnd_toStartOf="@+id/heightTxt2"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/userNameUpdateTxt" />
-
-        <EditText
             android:id="@+id/heightTxt2"
-            android:layout_width="108dp"
+            android:layout_width="100dp"
             android:layout_height="45dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp"
-            android:maxLength="3"
-            android:layout_marginTop="11dp"
-            android:background="@drawable/custom_edit_text_white"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="300dp"
+            android:background="@drawable/custom_edit_text"
             android:drawablePadding="10dp"
             android:drawableRight="@drawable/height"
             android:ems="10"
             android:gravity="right"
+            android:hint="الطول"
             android:inputType="number"
-            android:paddingBottom="7dp"
-            android:paddingRight="10dp"
-            android:paddingTop="8.5dp"
-            android:textSize="16dp"
-            app:layout_constraintStart_toEndOf="@+id/ageTxt2"
-            app:layout_constraintTop_toBottomOf="@+id/userNameUpdateTxt" />
-
-        <EditText
-            android:id="@+id/weightTxt2"
-            android:layout_width="108dp"
-            android:layout_height="45dp"
             android:maxLength="3"
-            android:layout_marginEnd="30dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="11dp"
-            android:background="@drawable/custom_edit_text_white"
-            android:drawablePadding="10dp"
-            android:drawableRight="@drawable/wieght"
-            android:ems="10"
-            android:gravity="right"
-            android:inputType="number"
             android:paddingBottom="7dp"
             android:paddingRight="10dp"
             android:paddingTop="8.5dp"
             android:textSize="16dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/heightTxt2"
-            app:layout_constraintTop_toBottomOf="@+id/userNameUpdateTxt" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/actionBar" />
+
 
         <EditText
             android:id="@+id/userNameUpdateTxt"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:maxLength="20"
-            android:layout_marginEnd="30dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="28dp"
-            android:background="@drawable/custom_edit_text_white"
+            android:background="@drawable/custom_edit_text"
             android:drawablePadding="10dp"
             android:drawableRight="@drawable/user"
             android:ems="10"
             android:gravity="right"
-            android:inputType="textPersonName"
+            android:hint="الإسم"
+            android:inputType="textEmailAddress"
+            android:maxLength="20"
+            android:paddingBottom="7dp"
+            android:paddingRight="10dp"
+            android:paddingTop="8.5dp"
+            android:textSize="16dp"
+            app:layout_constraintBottom_toTopOf="@+id/heightTxt2"
+            app:layout_constraintHorizontal_bias="0.508"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
+
+        <EditText
+            android:id="@+id/weightTxt2"
+            android:layout_width="100dp"
+            android:layout_height="45dp"
+            android:layout_marginEnd="17dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="17dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="300dp"
+            android:background="@drawable/custom_edit_text"
+            android:drawablePadding="10dp"
+            android:drawableRight="@drawable/wieght"
+            android:ems="10"
+            android:gravity="right"
+            android:hint="الوزن"
+            android:inputType="number"
+            android:maxLength="3"
             android:paddingBottom="7dp"
             android:paddingRight="10dp"
             android:paddingTop="8.5dp"
             android:textSize="16dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.956"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ivProfileUpdate" />
+            app:layout_constraintTop_toBottomOf="@+id/actionBar" />
+
+        <EditText
+            android:id="@+id/ageTxt2"
+            android:layout_width="100dp"
+            android:layout_height="45dp"
+            android:layout_marginLeft="28dp"
+            android:layout_marginTop="300dp"
+            android:background="@drawable/custom_edit_text"
+            android:drawablePadding="10dp"
+            android:drawableRight="@drawable/age"
+            android:ems="10"
+            android:gravity="right"
+            android:hint="العمر"
+            android:inputType="number"
+            android:maxLength="2"
+            android:paddingBottom="7dp"
+            android:paddingRight="10dp"
+            android:paddingTop="8.5dp"
+            android:textSize="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/actionBar" />
 
         <ImageView
             android:id="@+id/ivProfileUpdate"
