--- a/app/src/main/res/layout/fragment_add_workout2user.xml
+++ b/app/src/main/res/layout/fragment_add_workout2user.xml
@@ -141,43 +141,36 @@
                 android:layout_above="@+id/tvProfileHeight"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
-                android:layout_marginEnd="20dp"
-                android:layout_marginLeft="76dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginStart="76dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginRight="4dp"
                 android:layout_marginTop="8dp"
                 android:gravity="right"
                 android:text="الهدف الرياضي"
                 android:textColor="@color/blackGrey"
-                android:textSize="14sp"
+                android:textSize="11sp"
                 app:layout_constraintEnd_toStartOf="@+id/imageView9"
-                app:layout_constraintHorizontal_bias="0.795"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/tvprofileActivity"
-                android:layout_width="35dp"
+                android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_alignParentBottom="true"
                 android:layout_marginBottom="16dp"
                 android:layout_marginEnd="4dp"
-                android:layout_marginLeft="28dp"
                 android:layout_marginRight="4dp"
-                android:layout_marginStart="28dp"
                 android:layout_marginTop="16dp"
                 android:text="عالي"
                 android:textColor="@color/blackGrey"
-                android:textSize="14sp"
+                android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/imageView13"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvprofileGoal" />
 
             <TextView
                 android:id="@+id/tvProfileAge"
 
-                android:layout_width="25dp"
+                android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_below="@+id/tvWeight"
                 android:layout_centerHorizontal="true"
@@ -185,61 +178,32 @@
                 android:layout_marginRight="4dp"
                 android:layout_marginTop="16dp"
                 android:gravity="center"
-                android:text="23"
+                android:text="23 سنة"
                 android:textColor="@color/blackGrey"
-                android:textSize="15sp"
+                android:textSize="12sp"
                 app:layout_constraintEnd_toStartOf="@+id/imageView12"
                 app:layout_constraintTop_toBottomOf="@+id/tvProfileName" />
 
             <TextView
-                android:id="@+id/tvProfileAge2"
-
-                android:layout_width="28dp"
-                android:layout_height="30dp"
-                android:layout_below="@+id/tvWeight"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="18dp"
-                android:text="سنة"
-                android:textColor="@color/blackGrey"
-                android:textSize="13sp"
-                app:layout_constraintEnd_toStartOf="@+id/tvProfileAge"
-                app:layout_constraintTop_toBottomOf="@+id/tvProfileName" />
-
-            <TextView
                 android:id="@+id/tvProfileHeight"
-                android:layout_width="25dp"
+                android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_above="@+id/tvProfileAge"
                 android:layout_centerHorizontal="true"
-                android:layout_marginEnd="7dp"
-                android:layout_marginRight="7dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginRight="4dp"
                 android:layout_marginTop="16dp"
                 android:gravity="center"
-                android:text="190"
+                android:text="190 سم"
                 android:textColor="@color/blackGrey"
-                android:textSize="15sp"
+                android:textSize="12sp"
                 app:layout_constraintEnd_toStartOf="@+id/imageView11"
-                app:layout_constraintTop_toBottomOf="@+id/tvProfileName" />
-
-            <TextView
-                android:id="@+id/tvProfileHeight2"
-                android:layout_width="25dp"
-                android:layout_height="30dp"
-                android:layout_above="@+id/tvProfileAge"
-                android:layout_centerHorizontal="true"
-                android:layout_marginEnd="1dp"
-                android:layout_marginRight="1dp"
-                android:layout_marginTop="18dp"
-                android:text="سم"
-                android:textColor="@color/blackGrey"
-                android:textSize="13sp"
-                app:layout_constraintEnd_toStartOf="@+id/tvProfileHeight"
                 app:layout_constraintTop_toBottomOf="@+id/tvProfileName" />
 
             <TextView
                 android:id="@+id/tvWeight"
 
-                android:layout_width="25dp"
+                android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_alignLeft="@+id/tvprofileGoal"
                 android:layout_alignStart="@+id/tvprofileGoal"
@@ -248,26 +212,10 @@
                 android:layout_marginRight="4dp"
                 android:layout_marginTop="16dp"
                 android:gravity="center"
-                android:text="72"
-                android:textColor="@color/blackGrey"
-                android:textSize="15sp"
-                app:layout_constraintEnd_toStartOf="@+id/imageView10"
-                app:layout_constraintTop_toBottomOf="@+id/tvProfileName" />
-
-            <TextView
-                android:id="@+id/tvWeight2"
-
-                android:layout_width="20dp"
-                android:layout_height="30dp"
-                android:layout_alignLeft="@+id/tvprofileGoal"
-                android:layout_alignStart="@+id/tvprofileGoal"
-                android:layout_below="@+id/tvprofileGoal"
-                android:layout_marginTop="18dp"
-                android:gravity="right"
-                android:text="كغ"
+                android:text="72 كغ"
                 android:textColor="@color/blackGrey"
                 android:textSize="13sp"
-                app:layout_constraintEnd_toStartOf="@+id/tvWeight"
+                app:layout_constraintEnd_toStartOf="@+id/imageView10"
                 app:layout_constraintTop_toBottomOf="@+id/tvProfileName" />
 
             <TextView
@@ -276,8 +224,8 @@
                 android:layout_width="150dp"
                 android:layout_height="30dp"
                 android:layout_alignParentBottom="true"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginRight="4dp"
                 android:layout_marginTop="8dp"
                 android:gravity="right"
                 android:text="إسم المتدرب"
@@ -290,8 +238,8 @@
                 android:id="@+id/imageView8"
                 android:layout_width="22dp"
                 android:layout_height="25dp"
-                android:layout_marginEnd="22dp"
-                android:layout_marginRight="22dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
                 android:layout_marginTop="8dp"
                 android:src="@drawable/man2"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -301,8 +249,8 @@
                 android:id="@+id/imageView10"
                 android:layout_width="22dp"
                 android:layout_height="25dp"
-                android:layout_marginEnd="22dp"
-                android:layout_marginRight="22dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
                 android:layout_marginTop="8dp"
                 android:src="@drawable/balance"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -312,33 +260,33 @@
                 android:id="@+id/imageView11"
                 android:layout_width="22dp"
                 android:layout_height="25dp"
-                android:layout_marginEnd="4dp"
-                android:layout_marginRight="4dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
                 android:layout_marginTop="16dp"
                 android:src="@drawable/text_height"
-                app:layout_constraintEnd_toStartOf="@+id/tvProfileAge2"
+                app:layout_constraintEnd_toStartOf="@+id/tvProfileAge"
                 app:layout_constraintTop_toBottomOf="@+id/tvProfileName" />
 
             <ImageView
                 android:id="@+id/imageView12"
                 android:layout_width="22dp"
                 android:layout_height="25dp"
-                android:layout_marginEnd="4dp"
-                android:layout_marginRight="4dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
                 android:layout_marginTop="16dp"
                 android:src="@drawable/calendar_2"
-                app:layout_constraintEnd_toStartOf="@+id/tvWeight2"
+                app:layout_constraintEnd_toStartOf="@+id/tvWeight"
                 app:layout_constraintTop_toBottomOf="@+id/tvProfileName" />
 
             <ImageView
                 android:id="@+id/imageView13"
                 android:layout_width="22dp"
                 android:layout_height="25dp"
-                android:layout_marginEnd="4dp"
-                android:layout_marginRight="4dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
                 android:layout_marginTop="16dp"
                 android:src="@drawable/running"
-                app:layout_constraintEnd_toStartOf="@+id/tvProfileHeight2"
+                app:layout_constraintEnd_toStartOf="@+id/tvProfileHeight"
                 app:layout_constraintTop_toBottomOf="@+id/tvprofileGoal" />
 
             <ImageView
@@ -356,8 +304,8 @@
                 android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="27dp"
-                android:layout_marginRight="27dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
                 android:text="الإسم"
                 android:textSize="6sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -367,8 +315,8 @@
                 android:id="@+id/textView12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="25dp"
-                android:layout_marginRight="25dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
                 android:text="الوزن"
                 android:textSize="6sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -378,30 +326,30 @@
                 android:id="@+id/textView13"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
-                android:text="الطول"
+                android:layout_marginEnd="60dp"
+                android:layout_marginRight="60dp"
+                android:text="العمر"
                 android:textSize="6sp"
-                app:layout_constraintEnd_toStartOf="@+id/tvWeight2"
+                app:layout_constraintEnd_toStartOf="@+id/textView12"
                 app:layout_constraintTop_toBottomOf="@+id/imageView12" />
 
             <TextView
                 android:id="@+id/textView14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginEnd="58dp"
+                android:layout_marginRight="58dp"
                 android:text="الطول"
                 android:textSize="6sp"
-                app:layout_constraintEnd_toStartOf="@+id/tvProfileAge2"
+                app:layout_constraintEnd_toStartOf="@+id/textView13"
                 app:layout_constraintTop_toBottomOf="@+id/imageView11" />
 
             <TextView
                 android:id="@+id/textView15"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="68dp"
-                android:layout_marginRight="68dp"
+                android:layout_height="12dp"
+                android:layout_marginEnd="62dp"
+                android:layout_marginRight="62dp"
                 android:text="النشاط"
                 android:textSize="6sp"
                 app:layout_constraintEnd_toStartOf="@+id/textView14"
