--- a/app/src/main/res/layout-hdpi/card_view_mu_name.xml
+++ b/app/src/main/res/layout-hdpi/card_view_mu_name.xml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@color/md_white_1000"
+    android:layout_marginVertical="5dp"
+
+
+    >
+
 <android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/cardview_id"
     android:clickable="true"
-    android:layout_width="120dp"
+    android:layout_width="130dp"
     android:layout_height="190dp"
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="5dp"
     cardview:cardCornerRadius="4dp"
-    android:layoutDirection="ltr">
+    android:layoutDirection="ltr"
+    android:layout_marginHorizontal="3dp"
+    >
 
     <LinearLayout
         android:orientation="vertical"
@@ -34,3 +44,5 @@
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
+
+</RelativeLayout>
