--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,17 +12,13 @@
     <TextView
         android:id="@+id/currentUserTxt"
         android:layout_width="wrap_content"
-        android:layout_height="44dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/imageView2"
-        android:layout_marginBottom="162dp"
-        android:layout_marginEnd="63dp"
-        android:layout_marginRight="63dp"
         android:fontFamily="@font/cairo_semibold"
+        android:layout_toRightOf="@+id/divider"
         android:onClick="signinTxt"
         android:text="مستخدم حالي"
+        android:layout_marginLeft="10dp"
         android:textSize="20dp" />
 
     <!--<TextView-->
@@ -54,16 +50,14 @@
         android:id="@+id/newUserTxt"
         android:layout_width="wrap_content"
         android:layout_below="@+id/imageView2"
-        android:layout_height="43dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/currentUserTxt"
-        android:layout_marginStart="61dp"
+        android:layout_height="wrap_content"
         android:fontFamily="@font/cairo_semibold"
         android:onClick="signupTxt"
         android:text="مستخدم جديد"
         android:textSize="20dp"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="61dp" />
+        android:layout_marginRight="10dp"
+        android:layout_toLeftOf="@+id/divider"
+        />
 
     <View
         android:id="@+id/divider"
@@ -71,16 +65,17 @@
         android:layout_width="7dp"
         android:layout_height="37dp"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="5dp"
         android:background="#cf0545" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="307dp"
         android:layout_height="181dp"
-        android:src="@drawable/logo_welcome_screen"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="180dp" />
+        android:layout_marginTop="200dp"
+        android:src="@drawable/logo_welcome_screen" />
 
     <!--<VideoView-->
         <!--android:id="@+id/video"-->
