--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activity.UserDetails"
-    android:background="@drawable/vegowall">
+    android:background="@drawable/vegowall"
+    >
 
 
 
@@ -14,7 +15,8 @@
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layoutDirection="rtl">
+        android:layoutDirection="ltr"
+        >
 
         // هذي اللي تسوي البار اللي فوق
 
@@ -73,7 +75,6 @@
             android:onClick="registerBtn"
             android:text="حفظ ومتابعة"
             android:textColor="#ffff"
-
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@+id/signinTxt"
             app:layout_constraintHorizontal_bias="0.0"
@@ -97,52 +98,53 @@
         <RelativeLayout
             android:id="@+id/relaSpinner1"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginEnd="30dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="18dp"
+            android:layout_height="48dp"
+            android:layout_marginEnd="25dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="12dp"
             android:background="@drawable/custom_spinner"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+
             app:layout_constraintTop_toBottomOf="@+id/ageTxt">
 
             <Spinner
                 android:id="@+id/spinner2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:spinnerMode="dropdown"
-                android:layout_alignParentLeft="true" />
+                android:spinnerMode="dropdown" />
         </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/relaSpinner2"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginEnd="30dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="18dp"
+            android:layout_height="48dp"
+            android:layout_marginEnd="25dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="12dp"
             android:background="@drawable/custom_spinner"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/relaSpinner1">
 
+            app:layout_constraintTop_toBottomOf="@+id/relaSpinner1">
 
             <Spinner
                 android:id="@+id/spinner3"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:spinnerMode="dropdown"
-                android:layout_alignParentLeft="true" />
+                android:spinnerMode="dropdown" />
         </RelativeLayout>
 
         <EditText
@@ -225,9 +227,7 @@
             android:id="@+id/ageTxt"
             android:layout_width="100dp"
             android:layout_height="45dp"
-            android:layout_marginEnd="255dp"
-            android:layout_marginLeft="17dp"
-            android:layout_marginRight="255dp"
+            android:layout_marginLeft="28dp"
             android:layout_marginTop="300dp"
             android:background="@drawable/custom_edit_text"
             android:drawablePadding="10dp"
@@ -241,7 +241,6 @@
             android:paddingRight="10dp"
             android:paddingTop="8.5dp"
             android:textSize="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/actionBar" />
 
