--- a/app/src/main/res/layout/fragment_track_progress_fragment_admin.xml
+++ b/app/src/main/res/layout/fragment_track_progress_fragment_admin.xml
@@ -65,6 +65,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="178dp"
+        android:layout_marginHorizontal="25dp"
         android:layout_marginVertical="20dp"
         android:background="@drawable/custom_edit_text_white">
 
@@ -81,23 +82,20 @@
             android:id="@+id/tvPreviousWeight"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
             android:layout_alignTop="@+id/imageView7"
-            android:layout_marginStart="104dp"
             android:background="@drawable/custom_table_text"
+            android:layout_toLeftOf="@+id/textView21"
             android:gravity="center"
             android:text="72"
+            android:layout_marginRight="40dp"
             android:textColor="@color/blackGrey"
             android:textSize="18sp"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="104dp" />
+             />
 
         <TextView
             android:id="@+id/tvCurrentWeight"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
-
-            android:layout_alignStart="@+id/tvPreviousWeight"
             android:layout_alignTop="@+id/imageView6"
             android:background="@drawable/custom_table_text"
             android:gravity="center"
@@ -111,10 +109,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/tvPreviousWeight"
-            android:layout_alignStart="@+id/textView24"
+            android:layout_alignParentStart="true"
+            android:layout_toLeftOf="@+id/tvCurrentWeight"
             android:text="كغ"
+            android:layout_marginRight="10dp"
             android:textColor="@color/blackGrey"
-            android:layout_alignLeft="@+id/textView24" />
+            android:layout_alignParentLeft="true"
+            android:layout_toStartOf="@+id/tvCurrentWeight"
+            android:layout_marginEnd="10dp" />
 
         <TextView
             android:id="@+id/textView24"
@@ -122,11 +124,13 @@
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/tvCurrentWeight"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="79dp"
+            android:layout_toLeftOf="@+id/tvCurrentWeight"
             android:text="كغ"
+            android:layout_marginRight="10dp"
             android:textColor="@color/blackGrey"
-            android:layout_marginLeft="79dp"
-            android:layout_alignParentLeft="true" />
+            android:layout_alignParentLeft="true"
+            android:layout_marginEnd="10dp"
+            android:layout_toStartOf="@+id/tvCurrentWeight" />
 
         <TextView
             android:id="@+id/textView21"
@@ -134,7 +138,6 @@
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/tvPreviousWeight"
             android:layout_marginRight="10dp"
-            android:layout_marginBottom="0dp"
             android:layout_toLeftOf="@+id/imageView7"
             android:text="الوزن السابق"
             android:textColor="@color/blackGrey" />
@@ -145,7 +148,6 @@
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/tvCurrentWeight"
             android:layout_marginRight="10dp"
-
             android:layout_toLeftOf="@+id/imageView6"
             android:text="الوزن الحالي"
             android:textColor="@color/blackGrey" />
@@ -161,7 +163,7 @@
             android:layout_alignParentBottom="true"
             android:layout_marginEnd="25dp"
             android:layout_marginRight="35dp"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="25dp"
             app:srcCompat="@drawable/balance" />
 
         <ImageView
