--- a/app/src/main/res/layout/fragment_track_progress_fragment_user.xml
+++ b/app/src/main/res/layout/fragment_track_progress_fragment_user.xml
@@ -62,61 +62,64 @@
                 android:id="@+id/tvPreviousWeight"
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/textView21"
-                android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_marginLeft="103dp"
-                android:layout_marginStart="103dp"
+                android:layout_alignTop="@+id/imageView7"
+                android:layout_marginStart="104dp"
                 android:background="@drawable/custom_table_text"
                 android:gravity="center"
+                android:text="72"
                 android:textColor="@color/blackGrey"
-                android:textSize="18sp" />
-
+                android:textSize="18sp"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="104dp" />
             <EditText
                 android:id="@+id/tvCurrentWeight"
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
                 android:inputType="number"
-                android:layout_alignLeft="@+id/tvPreviousWeight"
                 android:layout_alignStart="@+id/tvPreviousWeight"
                 android:layout_alignTop="@+id/imageView6"
                 android:background="@drawable/custom_table_text"
                 android:gravity="center"
                 android:textColor="@color/blackGrey"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:layout_alignLeft="@+id/tvPreviousWeight" />
 
             <TextView
                 android:id="@+id/textView20"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/tvPreviousWeight"
-                android:layout_alignLeft="@+id/textView24"
-                android:layout_alignStart="@+id/textView24"
+                android:layout_alignParentStart="true"
+                android:layout_toLeftOf="@+id/tvCurrentWeight"
                 android:text="كغ"
-                android:textColor="@color/blackGrey" />
+                android:layout_marginRight="10dp"
+                android:textColor="@color/blackGrey"
+                android:layout_alignParentLeft="true"
+                android:layout_toStartOf="@+id/tvCurrentWeight"
+                android:layout_marginEnd="10dp" />
 
             <TextView
                 android:id="@+id/textView24"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/imageView6"
-                android:layout_alignParentLeft="true"
+                android:layout_alignBottom="@+id/tvCurrentWeight"
                 android:layout_alignParentStart="true"
-                android:layout_marginLeft="79dp"
-                android:layout_marginStart="79dp"
+                android:layout_toLeftOf="@+id/tvCurrentWeight"
                 android:text="كغ"
-                android:textColor="@color/blackGrey" />
+                android:layout_marginRight="10dp"
+                android:textColor="@color/blackGrey"
+                android:layout_alignParentLeft="true"
+                android:layout_marginEnd="10dp"
+                android:layout_toStartOf="@+id/tvCurrentWeight" />
 
             <TextView
                 android:id="@+id/textView21"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginEnd="124dp"
-                android:layout_marginRight="124dp"
-                android:layout_marginTop="38dp"
+                android:layout_alignBottom="@+id/tvPreviousWeight"
+                android:layout_marginRight="10dp"
+                android:layout_toLeftOf="@+id/imageView7"
                 android:text="الوزن السابق"
                 android:textColor="@color/blackGrey" />
 
@@ -124,9 +127,9 @@
                 android:id="@+id/textView22"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/imageView6"
-                android:layout_alignLeft="@+id/textView21"
-                android:layout_alignStart="@+id/textView21"
+                android:layout_alignBottom="@+id/tvCurrentWeight"
+                android:layout_marginRight="10dp"
+                android:layout_toLeftOf="@+id/imageView6"
                 android:text="الوزن الحالي"
                 android:textColor="@color/blackGrey" />
 
@@ -134,10 +137,14 @@
                 android:id="@+id/imageView6"
                 android:layout_width="50dp"
                 android:layout_height="40dp"
-                android:layout_alignLeft="@+id/imageView7"
-                android:layout_alignParentBottom="true"
                 android:layout_alignStart="@+id/imageView7"
-                android:layout_marginBottom="30dp"
+                android:layout_alignLeft="@+id/imageView7"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="25dp"
+                android:layout_marginRight="35dp"
+                android:layout_marginBottom="25dp"
                 app:srcCompat="@drawable/balance" />
 
             <ImageView
@@ -145,17 +152,17 @@
                 android:layout_width="50dp"
                 android:layout_height="40dp"
                 android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginEnd="65dp"
-                android:layout_marginRight="65dp"
+                android:layout_marginEnd="25dp"
                 android:layout_marginTop="30dp"
-                app:srcCompat="@drawable/balance" />
+                app:srcCompat="@drawable/balance"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="65dp" />
         </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="196dp"
+            android:layout_height="185dp"
             android:layout_marginHorizontal="25dp"
             android:layout_marginVertical="20dp"
             android:background="@drawable/custom_edit_text_white">
@@ -172,8 +179,9 @@
 
             <TextView
                 android:id="@+id/tvPerfectWeight"
-                android:layout_width="323dp"
+                android:layout_width="match_parent"
                 android:layout_height="139dp"
+                android:layout_marginHorizontal="15dp"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="18dp"
