--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/md_blue_300">
+    android:background="@color/md_white_1000"
+
+    >
 
     <RelativeLayout
         android:id="@+id/relative"
@@ -38,6 +40,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
+        android:layout_margin="5dp"
         android:background="@color/grey" />
 
 
