--- a/app/src/main/res/layout/fragment_add_meals.xml
+++ b/app/src/main/res/layout/fragment_add_meals.xml
@@ -635,28 +635,16 @@
                         android:id="@+id/textView11"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
-                        android:layout_marginStart="77dp"
-                        android:text="الكمية"
-                        android:textColor="#ffffff"
-                        android:layout_alignParentLeft="true"
-                        android:layout_marginLeft="77dp" />
+                        android:layout_marginLeft="40dp"
+                        android:layout_marginStart="40dp"
+                        android:layout_centerVertical="true"
+                        android:text="الكمية (جم)"
+                        android:textColor="#ffffff" />
 
-                    <TextView
-                        android:id="@+id/textView20"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentTop="true"
-                        android:layout_marginStart="44dp"
-                        android:text="(غرام)"
-                        android:layout_marginVertical="3dp"
-                        android:textColor="@color/grey"
 
-                        android:textSize="12sp"
-                        android:layout_alignParentLeft="true"
-                        android:layout_marginLeft="44dp" />
                 </RelativeLayout>
 
 
@@ -703,7 +691,7 @@
                         android:layout_marginLeft="40dp"
                         android:layout_marginStart="40dp"
                         android:layout_centerVertical="true"
-                        android:text="الكمية (غرام)"
+                        android:text="الكمية (جم)"
                         android:textColor="#ffffff" />
                 </RelativeLayout>
 
